refactor: stream map to list use toList()